iisnode/WIN-13NQ4FGA3S9-8356-stderr-1537169373936.txt
Application has thrown an uncaught exception and is terminated:
C:\Projects\chatbot\chatbot\method\sendMessage.js:6
                url:'https://api.telegram.org/bot516124228:AAGk6_VlhOeLGuWg4w22H1tYd9eHCUgLOR0/sendMessage?chat_id='+chatID+'&text=hi+tppp,
                                                                                                                            ^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (C:\Projects\chatbot\chatbot\server.js:12:20)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
